new release, new ISO images

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ Motto: Plan your installation, and FAI installs your plan.</p>
 
 <ul>
 
-<li>[4 Feb 2014] <b>FAI 4.1 released</b></li>
+<li>[3 Jun 2014] <b>FAI 4.2 released, new ISO images created</b></li>
 <li>[15 September 2011] <b>CentOS and Scientific Linux Cern support</b> <a href="https://lists.uni-koeln.de/pipermail/linux-fai/2011-September/009243.html">more ...</a></li>
 <li>[21 Dec 2009] The FAI project celebrates its <a href="/doc/10-jahre-fai.pdf">10th anniversary. </a></li>
 </ul>
