move link to other page

--- a/fai-cd/index.html
+++ b/fai-cd/index.html
@@ -57,8 +57,7 @@ CD. No network is needed and you can install the whole system from
 CD. 
 <p>
 Look at the fai-cd slideshow! <a href="/slideshow/">16
-pictures</a> showing a complete installation from CD (<a
-  href="/slideshow/fai-cd-slideshow.tar.gz">all pictures in a tarball</a>)
+pictures</a> showing a complete installation from CD
 <HR>
 
 
