--- a/slideshow/page101.html
+++ b/slideshow/page101.html
@@ -36,6 +36,7 @@
 <a href="page102.html" class="link">Next&gt;&gt;</a>&nbsp;&nbsp;-&nbsp;&nbsp;
 <a href="page116.html" class="link">End&gt;&gt|</A>
 </div>
+<a href="/slideshow/fai-cd-slideshow.tar.gz">All pictures in a tarball</a>
  
       </div>
     </div>
