add Jessie info

--- a/download/index.html
+++ b/download/index.html
@@ -41,6 +41,11 @@ The FAI software is divided in several packages:
 <li> Entry for /etc/apt/sources.list and for /etc/fai/apt/sources.list: 
 <p>
 <div class="featurebox"><h3>
+<pre>deb http://fai-project.org/download jessie koeln</pre>
+</h3></div>
+or
+<p>
+<div class="featurebox"><h3>
 <pre>deb http://fai-project.org/download wheezy koeln</pre>
 </h3></div>
 
