--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@ Motto: Plan your installation, and FAI installs your plan.</p>
 
 <ul>
 
+<li>[31 Aug 2014] <b>FAI 4.2.3 released, adding Jessie support</b></li>
 <li>[25 Jul 2014] <b>FAI 4.2.2 released, more LVM fixes</b></li>
-<li>[9 Jul 2014] <b>FAI 4.2.1 released, a lot of LVM related fixes</b></li>
 <li>[3 Jun 2014] <b>FAI 4.2 released, new ISO images created</b></li>
 <li>[15 September 2011] <b>CentOS and Scientific Linux Cern support</b> <a href="https://lists.uni-koeln.de/pipermail/linux-fai/2011-September/009243.html">more ...</a></li>
 <li>[21 Dec 2009] The FAI project celebrates its <a href="/doc/10-jahre-fai.pdf">10th anniversary. </a></li>
