add Kerim and cleanup

--- a/team/index.html
+++ b/team/index.html
@@ -44,8 +44,9 @@
 </tr>
 
 <tr>
-     <td><img src="/team/mt.jpg" style="float: left; margin: 1em 1em 1em 1em;" alt="" />
-     <td><strong><a href="http://www.forsyte.at/~tautschnig/">Michael Tautschnig</a></strong><br />mt (at) fai-project.org<br />mt on #fai<br />developer and setup-storage maintainer</td>
+     <td style="float: left; margin: 5em 1em 5em 1em;">-</td>
+     <td><strong>Kerim Gueney</strong><br/> no email yet (at) fai-project.org<br />gueney or kerim on #fai
+<br />developer</td>
 </tr>
 
 <tr>
@@ -53,26 +54,11 @@
      <td><strong><a href="http://michael-prokop.at/">Michael Prokop</a></strong><br />mika @ fai-project.org<br />mikap on #fai<br />developer and stable release manager</td>
 </tr>
 
-<tr>
-     <td><img src="/team/mgoetze.jpg" style="float: left; margin: 1em 1em 1em 1em;" alt="" />
-     <td><strong><a href="http://www.mgoetze.net/">Michael Goetze</a></strong><br />mgoetze @ fai-project.org<br />mgoetze on #fai<br />developer</td>
-</tr>
-
-<tr>
-     <td style="float: left; margin: 5em 1em 5em 1em;">-</td>
-     <td><strong><a href="http://www.jblache.org/">Julien Blache</a></strong><br/>jblache @ fai-project.org<br />developer</td>
-</tr>
-
-<tr>
-     <td><img src="/team/sh.jpg" style="float: left; margin: 1em 1em 1em 1em" alt="" />
-     <td><strong><a href="https://wiki.ubuntu.com/StephanAdig">Stephan Adig</a></strong><br />sh @ fai-project.org<br />\sh on #fai<br />ubuntu package maintainer</td>
-</tr>
-
 </table>
 
 <hr>
 <address>
-Fri Apr 15 15:05:49 CEST 2011
+Sun, 31 Aug 2014 22:10:00 +0200
 </address>
 
       </div>
