--- a/roadmap/index.html
+++ b/roadmap/index.html
@@ -32,13 +32,14 @@ These are topics that are important for the next FAI release.
 If you have any suggestions or like to work on a topic, please get in
 contact before you start working.
 
-<h1>Topics for FAI 4.0</h1>
+<h1>Topics for FAI 4.X</h1>
 <ul>
 <li> --- DONE ---
+<li> btrfs support for setup-storage
 <li> --- TODO ---
 <li> relax and recover
 <li> --- TODO's for the next versions ---
-<li> btrfs support for setup-storage
+<li>  new command for building cloud images with FAI
 <li> new option for fcopy, that replaces variables in the source
 file. Use %%_VARIABLENAME_%% ? check a mail concerning that
 <li> fai-monitor-gui: new option, remove host if everything went fine
@@ -50,7 +51,7 @@ classes, date of last fai action
 
 <HR>
 <ADDRESS>
-Mon, 07 Jul 2014 13:46:24 +0200
+Tue, 07 Oct 2014 19:29:11 +0200
 </ADDRESS>
 
       </div>
