add item, cleanup

--- a/roadmap/index.html
+++ b/roadmap/index.html
@@ -32,6 +32,10 @@ These are topics that are important for the next FAI release.
 If you have any suggestions or like to work on a topic, please get in
 contact before you start working.
 
+<br>
+<br>
+<br>
+<br>
 <h1>Topics for FAI 4.X</h1>
 <ul>
 <li> --- DONE ---
@@ -45,13 +49,15 @@ file. Use %%_VARIABLENAME_%% ? check a mail concerning that
 <li> fai-monitor-gui: new option, remove host if everything went fine
 <li> add option -l to fai command. List status of fai. Show list of
 classes, date of last fai action
+<li> --- LONG TERM ---
+<li> update FAI guide
 </ul>
 
-<p>
+<br>
 
 <HR>
 <ADDRESS>
-Tue, 07 Oct 2014 19:29:11 +0200
+Wed, 22 Oct 2014 00:48:49 +0200
 </ADDRESS>
 
       </div>
