--- a/reports/index.html
+++ b/reports/index.html
@@ -32,6 +32,33 @@ Currently we have more than 290 detailed reports. Please also fill out the <a hr
 <p>
 <hr/>
 
+<b>From:</b> Jan-Hendrik Zab, lastname == l3s=dot=.de
+<br><b>Date:</b> Wed, 22 Oct 2014 18:00:17 +0200
+<pre>
+How many hosts have you installed using fai? <b>7</b>. We have 7 servers installed with FAI at the moment, but every new server will
+be installed via FAI.
+
+Which version of fai are you using? <b>4.0.8~deb7u1</b>
+Which version are you using as your install kernel? vmlinuz-3.2.0-4-amd64
+
+Which types of hosts are you installing with fai? All our server systems running CentOS 6/7, basically 95% of all our servers.
+
+How do you boot your hosts? Only via network, DHCP and PXE.
+Does the default install kernel recognize all your hardware? Yes
+Which drivers are missing? None.
+Do you manage your configuration space under version control? Yes, git.
+
+How big is your config space (Mbytes, # of files)? 580K, #143
+What types of scripts are you using for local customization? shell
+
+<b>What is the business of your company/organisation?</b> Web science research, <a href="http://www.l3s.de">L3S Research Center</a> at the Leibniz Universität Hannover
+<br><b>Additional comments:</b>
+At the moment we are only using shell scripts via FAI, but we are currently
+planning to install a configuration management tool to keep configurations
+updated. So far, we are considering salt and ansible.
+</pre> <HR>
+
+
 <b>From:</b> anonymous
 <br><b>Date:</b> Tue, 13 May 2014 15:43:02 +0200
 <pre>
