--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ Motto: Plan your installation, and FAI installs your plan.</p>
 
 <ul>
 
-<li>[29 Sep 2014] <b>FAI 4.2.5 released,</b></li>
+<li>[24 Oct 2014] <b>FAI 4.3 released, btrfs support added</b></li>
 <li>[31 Aug 2014] <b>FAI 4.2.3 released, adding Jessie support</b></li>
 <li>[3 Jun 2014] <b>FAI 4.2 released, new ISO images created</b></li>
 <li>[15 September 2011] <b>CentOS and Scientific Linux Cern support</b> <a href="https://lists.uni-koeln.de/pipermail/linux-fai/2011-September/009243.html">more ...</a></li>
