use link to local copy of video

--- a/talks/index.html
+++ b/talks/index.html
@@ -74,7 +74,7 @@ in Frankfurt 2005</a>: A GUI for FAI was presented.
 
 <li> <a href="http://www.linuxpodcast.de/index.php?id=77">Interview (audio)</a> with Thomas. (11/2006, made at the Linux world expo in cologne).
 <li> A talk at LinuxTag 2007.
-<li> Thomas gave a talk and demonstration at FrOSCon 2007 (<a href="http://ftp.stw-bonn.de/pub/froscon/2007/ThomasLange-DeploymentVonGrossenLinuxInstallationen.mp4">video</a>).
+<li> Thomas gave a talk and demonstration at FrOSCon 2007 (<a href="../videos/ThomasLange-DeploymentVonGrossenLinuxInstallationen.mp4">video</a>).
 <li> Talk at the OpenExpo 2007 in Z&uuml;rich. <a href="../doc/openexpo-07.pdf">Slides</a> and the <a href="../doc/openexpo-07.mp3">audio file</a>.
 
 <li> A talk at the <a href="http://www.heinlein-support.de/web/akademie/slac-2007/slac07-konferenz/">2. Secure Linux Administration Conference (SLAC)</a>
