remove broken link

--- a/talks/index.html
+++ b/talks/index.html
@@ -82,8 +82,7 @@ in Frankfurt 2005</a>: A GUI for FAI was presented.
 <li> A talk at <a href="http://www.heise.de/events/2008/open_source_meets_business/">Open
 Source Meets Business</a>, 22.-24. Januar  2008  in Nuernberg, <a href="../doc/osmb.pdf">slides</a> (in german).
 
-<li> An <a href="http://www.perspektive89.com/2008/fully_automatic_installation_fai_interview_mit_hauptentwickler_thomas_lange">interview (video)</a>
-in german with Thomas (OSMB 2008).
+<li> An interview (video) in german with Thomas (OSMB 2008).
 
 <li> A talk at <a href="http://glt09.linuxtage.at/">Linuxtage Graz 2009</a>
 (<a href="http://glt09.linuxtage.at/?id=36">slides</a>)
