update for CEWE

--- a/reports/index.html
+++ b/reports/index.html
@@ -376,7 +376,8 @@ We are buying standard hardware with nvidia based graphics adapter
 <br><b>Date:</b> Tue, 13 Aug 2013 14:39:52 +0000
 
 <pre>
-How many hosts have you installed using fai? About <b>50 to 100</b>. We install all our new servers since 2 years with fai.
+How many hosts have you installed using fai? About <b>50 to 100</b>. 200 as of Nov 2014. 
+                                   We install all our new servers since 2 years with fai.
 Which version of fai are you using? <b>4.0.6</b>
 Which version are you using as your install kernel? plain Debian kernel
 
