update numbers for Limux

--- a/reports/index.html
+++ b/reports/index.html
@@ -2025,7 +2025,7 @@ involved.
 <b>From:</b> Florian Maier, florian =maier _muenchen d o t .de>
 <br><b>Date:</b> Mon, 21 Dec 2009 11:05:15 +0100
 <pre>
-How many hosts have you installed using fai? <b>~2500</b>
+How many hosts have you installed using fai? <b>~2500</b>,   update nov 2014: <b>16.000</b> hosts
 Which version of fai are you using? <b>3.2.x</b>
 Which version are you using as your install kernel? 2.6.26
 
