new FAI cd image 4.3.1+wheezy1

--- a/fai-cd/index.html
+++ b/fai-cd/index.html
@@ -33,7 +33,7 @@
 <br>
 <p style="text-align: center;">
 <span class="downloadbox-border" >
-<a href="faicd64-4.2.iso" style="text-decoration: none">
+<a href="faicd64-4.3.1+wheezy1.iso" style="text-decoration: none">
 <span class="downloadbox-real" >Download FAI CD</span>
 </a>
 </span>
@@ -41,8 +41,8 @@
 <br>
 
 <p style="text-align: center;">
-FAI 4.2, Debian Wheezy, Kernel 3.2, amd64, size 610MB,
-<a href=faicd64-4.2.iso.md5>md5sum</a>,
+FAI 4.3.1+wheezy1, Debian Wheezy, Kernel 3.2, amd64, size 648MB,
+<a href=faicd64-4.3.1+wheezy1.iso.md5>md5sum</a>,
 <a href=sha256sums.asc>sha256sum</a>
 <HR>
 <p>
@@ -66,7 +66,7 @@ pictures</a> showing a complete installation from CD
 
 You can write the ISO image to a USB stick using the command dd(1):
 <div class="featurebox">
-<pre>dd if=faicd64-4.2.iso of=/dev/sdX</pre> </div>
+<pre>dd if=faicd64-4.3.1+wheezy1.iso of=/dev/sdX</pre> </div>
 and replace /dev/sdX with the name of your USB device (e.g. /dev/sdf).
 
 
