--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ needs, without any interaction necessary.
 <p style="float:right; position:relative; top:-30px;">
 <!-- <p style="text-align: center;"> -->
 <span class="downloadbox-border" >
-<a href="/fai-cd/faicd64-4.2.iso" style="text-decoration: none">
+<a href="/fai-cd/faicd64-4.3.1+wheezy1.iso" style="text-decoration: none">
 <span class="downloadbox-real" >Download FAI CD</span>
 </a>
 </span>
@@ -55,6 +55,7 @@ Motto: Plan your installation, and FAI installs your plan.</p>
 
 <ul>
 
+<li>[26 Nov 2014] <b>New FAI CD image available, FAI 4.3.1+wheezy1</b></li>
 <li>[19 Nov 2014] <b>FAI 4.3.1 released, bug fixes</b></li>
 <li>[24 Oct 2014] <b>FAI 4.3 released, btrfs support added</b></li>
 <li>[3 Jun 2014] <b>FAI 4.2 released, new ISO images created</b></li>
