add my own cluster

--- a/cluster/index.html
+++ b/cluster/index.html
@@ -29,6 +29,10 @@
 
 <ul>
 
+<li>Thomas installed a 36 node cluster with 720 cores. 
+Each node has two E5-2690v2, 3.00GHz and 128GB of RAM. The parallel
+installation of all nodes using took 7 minutes. (2014)
+
 <li>A new <a href="http://www.debian.org/News/2011/20110729">Beowulf cluster</a> at EDF (200 Tflops) which is 43rd in the latest TOP500 (June 2011), was partially installed using FAI.
 
 <li> A huge cluster called <a href="http://wiki.debian.org/Teams/Publicity/DebianTimesTeam/PressReleases/GravitationalWaveDebianCluster">ATLAS</a>
@@ -97,7 +101,7 @@ foils</a> of building a Beowulf cluster from a winter school in 2001.
 
 <HR>
 <ADDRESS>
-Tue, 07 Oct 2011 13:35:12 +0100
+Wed, 26 Nov 2014 22:37:42 +0100
 </ADDRESS>
 
       </div>
