--- a/talks/index.html
+++ b/talks/index.html
@@ -68,13 +68,14 @@ at Cebit 2005 in Hannover.
 <li> Debconf5 in Helsinki: <a href="../doc/debconf5.pdf">Slides</a>
 <li> <a href="http://www.linuxworldexpo.de/">LinuxWorld Conferen & Expo
 in Frankfurt 2005</a>: A GUI for FAI was presented.
-<li> Thomas gave a talk a LCA 2006. <a href="http://conf.linux.org.au/">linux.conf.au</a> is Australia's national Linux conference and was held in Dunedin, New Zealand at the University of Otago.
+
+<li> I gave a talk a LCA 2006. <a href="http://www.linux.org.au/conf/2006/">linux.conf.au</a> is Australia's national Linux conference and was held in Dunedin, New Zealand at the University of Otago.
 
 <li> <a href="http://www.froscon.org/wiki/FrOSCon">FrOSCon 2006</a>. <a href="../doc/froscon-2006.pdf">Slides of the talk</a>.
 
 <li> <a href="http://www.linuxpodcast.de/index.php?id=77">Interview (audio)</a> with Thomas. (11/2006, made at the Linux world expo in cologne).
 <li> A talk at LinuxTag 2007.
-<li> Thomas gave a talk and demonstration at FrOSCon 2007 (<a href="../videos/ThomasLange-DeploymentVonGrossenLinuxInstallationen.mp4">video</a>).
+<li> I gave a talk and demonstration at FrOSCon 2007 (<a href="../videos/ThomasLange-DeploymentVonGrossenLinuxInstallationen.mp4">video</a>).
 <li> Talk at the OpenExpo 2007 in Z&uuml;rich. <a href="../doc/openexpo-07.pdf">Slides</a> and the <a href="../doc/openexpo-07.mp3">audio file</a>.
 
 <li> A talk at the <a href="http://www.heinlein-support.de/web/akademie/slac-2007/slac07-konferenz/">2. Secure Linux Administration Conference (SLAC)</a>
