--- a/team/index.html
+++ b/team/index.html
@@ -46,12 +46,12 @@
 <tr>
      <td style="float: left; margin: 5em 1em 5em 1em;">-</td>
      <td><strong>Kerim Gueney</strong><br/> no email yet (at) fai-project.org<br />gueney or kerim on #fai
-<br />developer</td>
+<br />developer and setup-storage expert</td>
 </tr>
 
 <tr>
      <td><img src="/team/mika.jpg" style="float: left; margin: 1em 1em 1em 1em;" alt="" />
-     <td><strong><a href="http://michael-prokop.at/">Michael Prokop</a></strong><br />mika @ fai-project.org<br />mikap on #fai<br />developer and stable release manager</td>
+     <td><strong><a href="http://michael-prokop.at/">Michael Prokop</a></strong><br />mika @ fai-project.org<br />mikap on #fai<br />developer</td>
 </tr>
 
 </table>
