--- a/talks/index.html
+++ b/talks/index.html
@@ -92,6 +92,10 @@ Source Meets Business</a>, 22.-24. Januar  2008  in Nuernberg, <a href="../doc/o
 <li> A talk at the <a href="http://www.netways.de/osdc/y2010">OSDC</a> (Open Source Data Center Conference 2010)
 <li> A talk at the <a href="http://www.netways.de/osdc/y2011">OSDC</a> (Open Source Data Center Conference 2011)
 <a href="../doc/osdc-2011.pdf">(Slides)</a>
+
+<li> A talk at the <a href="http://sysadmin.miniconf.org/programme15.html">
+linux.conf.au Systems Administration Miniconf</a> 2015
+<a href="../doc/lca2015-thomas_lange-fai.pdf">(Slides)</a>
 </ul>
 
 <!--
@@ -113,7 +117,7 @@ and at
 <p>
 
 <ADDRESS>
-Wed, 05 Nov 2014 17:55:31 +0100
+Tue, 10 Feb 2015 18:20:37 +0100
 </ADDRESS>
 
  
