--- a/index.html
+++ b/index.html
@@ -55,12 +55,11 @@ Motto: Plan your installation, and FAI installs your plan.</p>
 
 <ul>
 
+<li>[Mar 2015] <b>Thomas will give a talk at Chemnitzer Linuxtag</b></li>
 <li>[26 Nov 2014] <b>New FAI CD image available, FAI 4.3.1+wheezy1</b></li>
 <li>[19 Nov 2014] <b>FAI 4.3.1 released, bug fixes</b></li>
 <li>[24 Oct 2014] <b>FAI 4.3 released, btrfs support added</b></li>
-<li>[3 Jun 2014] <b>FAI 4.2 released, new ISO images created</b></li>
 <li>[15 September 2011] <b>CentOS and Scientific Linux Cern support</b> <a href="https://lists.uni-koeln.de/pipermail/linux-fai/2011-September/009243.html">more ...</a></li>
-<li>[21 Dec 2009] The FAI project celebrates its <a href="/doc/10-jahre-fai.pdf">10th anniversary. </a></li>
 </ul>
 
 <div style="width:32%;float:right;position:relative; top:-110px;">
