--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ Motto: Plan your installation, and FAI installs your plan.</p>
 
 <ul>
 
-<li>[Mar 2015] <b>Thomas will give a talk at Chemnitzer Linuxtag</b></li>
+<li>[Mar 2015] <b>Thomas will give a <a href="https://chemnitzer.linux-tage.de/2015/en/programm/beitrag/239">talk at Chemnitzer Linuxtag</a></b></li>
 <li>[26 Nov 2014] <b>New FAI CD image available, FAI 4.3.1+wheezy1</b></li>
 <li>[19 Nov 2014] <b>FAI 4.3.1 released, bug fixes</b></li>
 <li>[24 Oct 2014] <b>FAI 4.3 released, btrfs support added</b></li>
