--- a/contact/index.html
+++ b/contact/index.html
@@ -37,7 +37,7 @@
 <ul>
 <li> E-mail: <a href="mailto:fai (at) fai-project.org">fai no-spam @fai-project.org</a>
 for feedback, suggestions and comments
-<li> You can also talk to Mrfai on #fai IRC
+<li> You can also talk to Mrfai on #fai on irc.debian.org
 <li> If you have any question, please use the mailing list
 <li> You can also use the mailing list for feedback, comments
 <li> Bugs should be reported via the <a href="http://bugs.debian.org">Debian Bug Tracking System</a>  (BTS)
