add slides of talk

--- a/roadmap/index.html
+++ b/roadmap/index.html
@@ -41,6 +41,7 @@ contact before you start working.
 <li> --- DONE ---
 <li> btrfs support for setup-storage
 <li> --- TODO ---
+<li> replace live-boot with dracut in fai-cd (in progress)
 <li> relax and recover
 <li> --- TODO's for the next versions ---
 <li>  new command for building cloud images with FAI
@@ -57,7 +58,7 @@ classes, date of last fai action
 
 <HR>
 <ADDRESS>
-Wed, 22 Oct 2014 00:48:49 +0200
+Thu, 12 Mar 2015 11:24:40 +0100
 </ADDRESS>
 
       </div>
