--- a/talks/index.html
+++ b/talks/index.html
@@ -93,9 +93,13 @@ Source Meets Business</a>, 22.-24. Januar  2008  in Nuernberg, <a href="../doc/o
 <li> A talk at the <a href="http://www.netways.de/osdc/y2011">OSDC</a> (Open Source Data Center Conference 2011)
 <a href="../doc/osdc-2011.pdf">(Slides)</a>
 
-<li> A talk at the <a href="http://sysadmin.miniconf.org/programme15.html">
+<li> A short talk at the <a href="http://sysadmin.miniconf.org/programme15.html">
 linux.conf.au Systems Administration Miniconf</a> 2015
 <a href="../doc/lca2015-thomas_lange-fai.pdf">(Slides)</a>
+
+<li> A short talk at the <a href="https://chemnitzer.linux-tage.de/2015/">
+Chemnitzer Linuxtag</a> 2015
+<a href="../doc/chemnitz-2015.pdf">(Slides)</a>
 </ul>
 
 <!--
@@ -117,7 +121,7 @@ and at
 <p>
 
 <ADDRESS>
-Tue, 10 Feb 2015 18:20:37 +0100
+Tue, 24 Mar 2015 14:28:12 +0100
 </ADDRESS>
 
  
