--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Motto: Plan your installation, and FAI installs your plan.</p>
 <ul>
 
 <li>[17 Mar 2015] <b>FAI 4.3.2 released</b></li>
-<li>[Mar 2015] <b>Thomas will give a <a href="https://chemnitzer.linux-tage.de/2015/en/programm/beitrag/239">talk at the Chemnitzer Linuxtag</a></b></li>
+<li>[Mar 2015] <b>Thomas gave a <a href="https://chemnitzer.linux-tage.de/2015/en/programm/beitrag/239">talk at the Chemnitzer Linuxtag</a></b></li>
 <li>[26 Nov 2014] <b>New FAI CD image available, FAI 4.3.1+wheezy1</b></li>
 <li>[24 Oct 2014] <b>FAI 4.3 released, btrfs support added</b></li>
 <li>[15 September 2011] <b>CentOS and Scientific Linux Cern support</b> <a href="https://lists.uni-koeln.de/pipermail/linux-fai/2011-September/009243.html">more ...</a></li>
