--- a/cluster/index.html
+++ b/cluster/index.html
@@ -31,7 +31,7 @@
 
 <li>Thomas installed a 36 node cluster with 720 cores. 
 Each node has two E5-2690v2, 3.00GHz and 128GB of RAM. The parallel
-installation of all nodes using took 7 minutes. (2014)
+installation of all nodes using FAI took 7 minutes. (2014)
 
 <li>A new <a href="http://www.debian.org/News/2011/20110729">Beowulf cluster</a> at EDF (200 Tflops) which is 43rd in the latest TOP500 (June 2011), was partially installed using FAI.
 
