--- a/roadmap/index.html
+++ b/roadmap/index.html
@@ -42,6 +42,7 @@ contact before you start working.
 <li> btrfs support for setup-storage
 <li> --- TODO ---
 <li> replace live-boot with dracut in fai-cd (in progress)
+<li> update FAI guide (in progress)
 <li> relax and recover
 <li> --- TODO's for the next versions ---
 <li>  new command for building cloud images with FAI
@@ -51,14 +52,14 @@ file. Use %%_VARIABLENAME_%% ? check a mail concerning that
 <li> add option -l to fai command. List status of fai. Show list of
 classes, date of last fai action
 <li> --- LONG TERM ---
-<li> update FAI guide
+<li> zfs support?
 </ul>
 
 <br>
 
 <HR>
 <ADDRESS>
-Thu, 12 Mar 2015 11:24:40 +0100
+Fri, 27 Mar 2015 22:56:46 +0100
 </ADDRESS>
 
       </div>
