--- a/sources/index.html
+++ b/sources/index.html
@@ -34,7 +34,7 @@
 <pre>git clone git://github.com/faiproject/fai.git</pre>
 </h3></div>
 <li> <A href="https://github.com/faiproject/fai">Browsable source code</A> via http
-<li> <a href=http://lists.alioth.debian.org/pipermail/fai-commit/>git commit mails</a>
+<li> <a href="https://lists.uni-koeln.de/pipermail/linux-fai-commit/">git commit mails</a>
 <li> <a href="/sources/news.html">NEWS</A>: user visible changes of the sources
 <li> <a href=http://packages.debian.org/changelogs/pool/main/f/fai/current/changelog>Detailed changelog</a>
 <li> List of <a href="http://wiki.fai-project.org/index.php/Variables">important variables</a> inside FAI
