--- a/index.html
+++ b/index.html
@@ -55,11 +55,13 @@ Motto: Plan your installation, and FAI installs your plan.</p>
 
 <ul>
 
-<li>[27 Mar 2014] <b>New FAI CD image available, FAI 4.3.2+wheezy1</b></li>
+<li>[30 Apr 2015] <b>
+Thomas will talk about FAI at the <a
+href="http://koeln.ccc.de/updates/2015-04-30_OC_FAI.xml">Chaos Computer Club Cologne (C4)</a></b></li>
+<li>[27 Mar 2015] <b>New FAI CD image available, FAI 4.3.2+wheezy1</b></li>
 <li>[17 Mar 2015] <b>FAI 4.3.2 released</b></li>
-<li>[Mar 2015] <b>Thomas gave a <a href="https://chemnitzer.linux-tage.de/2015/en/programm/beitrag/239">talk at the Chemnitzer Linuxtag</a></b></li>
+<li>[21 Mar 2015] <b>Thomas gave a <a href="https://chemnitzer.linux-tage.de/2015/en/programm/beitrag/239">talk at the Chemnitzer Linuxtag</a></b></li>
 <li>[24 Oct 2014] <b>FAI 4.3 released, btrfs support added</b></li>
-<li>[15 September 2011] <b>CentOS and Scientific Linux Cern support</b> <a href="https://lists.uni-koeln.de/pipermail/linux-fai/2011-September/009243.html">more ...</a></li>
 </ul>
 
 <div style="width:32%;float:right;position:relative; top:-110px;">
