--- a/reports/index.html
+++ b/reports/index.html
@@ -32,6 +32,58 @@ Currently we have more than 290 detailed reports. Please also fill out the <a hr
 <p>
 <hr/>
 
+<b>From:</b> Rikard Nordin, first.last at l i u dot .se
+<br><b>Date:</b> Mon, 13 Apr 2015 09:25:45 +0200
+<pre>
+How many hosts have you installed using fai? <b>~250</b>
+Which version of fai are you using? <b>4.0.8</b>
+Which types of hosts are you installing with fai? desktops, cluster nodes, web servers, database servers, generic server
+
+Which version are you using as your install kernel? Debian (3.2.0-4), Mint/Ubuntu (3.13.0-49) and 3.16.0-0.bpo.4
+How do you boot your hosts? PXE, DHCP
+Does the default install kernel recognize all your hardware? No, but bpo-kernel does.
+Which drivers are missing? Dell Perc H730 Mini disk controller
+
+Do you manage your configuration space under version control? No, snapshots
+How big is your config space (Mbytes, # of files)? 159Mb, 505
+How many files do you have in ../config/files? 300
+
+What types of scripts are you using for local customization? Shell (bash, tcsh), Python, gnu cfengine,
+
+<b>What is the business of your company/organisation?</b> University,
+<a href="http://www.ida.liu.se"> Department of Computer and Information Science, Linköping University</a>
+<br><b>Additional comments:</b>
+To install and configure the linux environment
+</pre> <HR>
+
+
+<b>From:</b> Steven Wend
+<br><b>Date:</b> Thu, 26 Mar 2015 08:55:58 +0000
+<pre>
+How many hosts have you installed using fai? <b></b>
+Which version of fai are you using? <b></b>
+
+Which types of hosts are you installing with fai? Applicationserver (Java), Webserver (PHP),
+    Workstations for programmer (Java / PHP)
+
+Which version are you using as your install kernel? Ubuntu 14.04LTS with 3.13.0-44-generic.
+
+How do you boot your hosts? via network (PXE, DHCP): PXE and DHCP but external ressources so no service via fai-server
+We have also XEN domains using Pygrub booting initramfs and extracted kernel image.
+
+Does the default install kernel recognize all your hardware? Yes.
+Which drivers are missing? None at the moment.
+
+Do you manage your configuration space under version control? We use git to manage the configurations.
+How big is your config space (Mbytes, # of files)? 39M, 16 files for Debian 8, 14 files for Ubuntu 1404
+What types of scripts are you using for local customization? Shell and after reboot puppet.
+
+<b>What is the business of your company/organisation?</b> Software development, medium-sized business in germany
+<br><b>Additional comments:</b>
+Good job Thomas!
+</pre> <HR>
+
+
 <b>From:</b> Jan-Hendrik Zab, lastname == l3s=dot=.de
 <br><b>Date:</b> Wed, 22 Oct 2014 18:00:17 +0200
 <pre>
