--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Motto: Plan your installation, and FAI installs your plan.</p>
 <ul>
 
 <li>[30 Apr 2015] <b>
-Thomas will talk about FAI at the <a
+Thomas gave a talk about FAI at the <a
 href="http://koeln.ccc.de/updates/2015-04-30_OC_FAI.xml">Chaos Computer Club Cologne (C4)</a></b></li>
 <li>[27 Mar 2015] <b>New FAI CD image available, FAI 4.3.2+wheezy1</b></li>
 <li>[17 Mar 2015] <b>FAI 4.3.2 released</b></li>
