--- a/talks/index.html
+++ b/talks/index.html
@@ -100,6 +100,7 @@ linux.conf.au Systems Administration Miniconf</a> 2015
 <li> A short talk at the <a href="https://chemnitzer.linux-tage.de/2015/">
 Chemnitzer Linuxtag</a> 2015
 <a href="../doc/chemnitz-2015.pdf">(Slides)</a>
+<li> A talk a Chaos Computer Club Cologne (C4) (2015)
 </ul>
 
 <!--
