--- a/otherdocs/index.html
+++ b/otherdocs/index.html
@@ -155,7 +155,8 @@ FAI. This code is no longer maintained.
 <h2>FAI documentation in German</h2>
 <ul>
 
-
+<li> <a href="http://doku.fietz.net/index.php?title=FAI_Ubuntu">FAI
+with Ubuntu</a> (Sep 2014)
 <li> <a href="http://blog.secretisland.de/category/fai-2/">Several blog entries</a>
 
 <li> <a href="https://www.pug.org/mediawiki/index.php/FAI_SPARC_Debian">Debian auf SPARC mit FAI</a>. Ein detailliertes HOWTO.
