--- a/roadmap/index.html
+++ b/roadmap/index.html
@@ -40,8 +40,8 @@ contact before you start working.
 <ul>
 <li> --- DONE ---
 <li> btrfs support for setup-storage
+<li> replace live-boot with dracut in fai-cd (in FAI 4.4~betaXX)
 <li> --- TODO ---
-<li> replace live-boot with dracut in fai-cd (in progress)
 <li> update FAI guide (in progress)
 <li> relax and recover
 <li> --- TODO's for the next versions ---
@@ -59,7 +59,7 @@ classes, date of last fai action
 
 <HR>
 <ADDRESS>
-Fri, 27 Mar 2015 22:56:46 +0100
+Thu, 11 Jun 2015 19:41:31 +0200
 </ADDRESS>
 
       </div>
