--- a/talks/index.html
+++ b/talks/index.html
@@ -96,6 +96,9 @@ Source Meets Business</a>, 22.-24. Januar  2008  in Nuernberg, <a href="../doc/o
 <li> A short talk at the <a href="http://sysadmin.miniconf.org/programme15.html">
 linux.conf.au Systems Administration Miniconf</a> 2015
 <a href="../doc/lca2015-thomas_lange-fai.pdf">(Slides)</a>
+<a href="../videos/FAI_the_universal_deployment_tool.webm">(Video)</a>
+
+
 
 <li> A short talk at the <a href="https://chemnitzer.linux-tage.de/2015/">
 Chemnitzer Linuxtag</a> 2015
@@ -122,7 +125,7 @@ and at
 <p>
 
 <ADDRESS>
-Tue, 24 Mar 2015 14:28:12 +0100
+Fri, 19 Jun 2015 10:50:35 +0200
 </ADDRESS>
 
  
