--- a/otherdocs/index.html
+++ b/otherdocs/index.html
@@ -155,6 +155,9 @@ FAI. This code is no longer maintained.
 <h2>FAI documentation in German</h2>
 <ul>
 
+<li> <a href="https://systemausfall.org/wikis/howto/FAI">Howto</a>
+including network server setup. (2014)
+
 <li> <a href="http://doku.fietz.net/index.php?title=FAI_Ubuntu">FAI
 with Ubuntu</a> (Sep 2014)
 <li> <a href="http://blog.secretisland.de/category/fai-2/">Several blog entries</a>
@@ -295,7 +298,7 @@ Short documentation</a> about FAI and etch.
 
 <hr>
 <address>
-Fri, 09 Dec 2011 14:30:45 +0100
+Tue, 23 Jun 2015 13:37:29 +0200
 </address>
 
       </div>
